# var-es-toolbox

./: .Renviron  .Rprofile  .gitignore  README.md  environment.yml  packages.txt  pyproject.toml  requirements.yml  setup.py  test.ipynb
notebooks/: 01_data_exploration.ipynb  02_data_processing.ipynb  03_model_training.ipynb
scripts/: .Renviron  01_data_exploration.py  02_data_processing.py  activate_renv.py  backtesting_main.py  main.py  renv_utils.py  run_R.py
src/var_es_toolbox/backtesting/: backtesting.R  r_backtesting.R
src/var_es_toolbox/data/: load_data.py
src/var_es_toolbox/models/: Models.R  __init__.py  caviar.R  garch.R  garch.py  gas.R  hs.R  hybrid_evt.R  hybrid_evt_2.R  non_parametric_models.R  r_arch_models.R  r_caviar_models.R  r_dcc_models.R  r_gas_models.R  r_hybrid_evt_models.R  r_models.R
src/var_es_toolbox/models/caviar/: ADAPTIVE.cpp  AS.cpp  ES_AR.cpp  ES_MULT.cpp  ObjectiveFunction.cpp  SAV.cpp  caviar.R  gjrGARCH.cpp  indirectGARCH.cpp  linearGARCH.cpp  linearTGARCH.cpp
